Move the relic data to electron store

--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "@techstark/opencv-js": "^4.9.0-release.3",
+    "electron-store": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tesseract.js": "^5.1.0",
