--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -1,9 +1,9 @@
 // @see - https://www.electron.build/configuration/configuration
 {
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
-  "appId": "YourAppID",
+  "appId": "N/A",
   "asar": true,
-  "productName": "YourAppName",
+  "productName": "HSR-Scanner",
   "directories": {
     "output": "release/${version}"
   },
