--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^11.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^10.0.5",
     "tesseract.js": "^5.1.0",
     "vite-tsconfig-paths": "^4.3.2"
   },
