--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mui/icons-material": "^5.15.18",
     "@nextui-org/react": "^2.4.2",
     "@techstark/opencv-js": "^4.9.0-release.3",
     "clsx": "^2.1.1",
     "electron-store": "^9.0.0",
     "framer-motion": "^11.2.10",
+    "lucide-react": "^0.396.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^10.0.5",
