Update the UI with shadcn

--- a/package.json
+++ b/package.json
@@ -21,15 +21,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.4.2",
+    "@radix-ui/react-checkbox": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.1",
     "@techstark/opencv-js": "^4.9.0-release.3",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "electron-store": "^9.0.0",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.396.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-resizable-panels": "^2.0.19",
+    "react-router-dom": "^6.24.0",
     "react-toastify": "^10.0.5",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^5.1.0",
     "vite-tsconfig-paths": "^4.3.2",
     "zustand": "^4.5.2"
