--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -40,6 +41,7 @@
     "lucide-react": "^0.396.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.0",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.24.0",
     "react-toastify": "^10.0.5",
@@ -47,6 +49,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^5.1.0",
     "vite-tsconfig-paths": "^4.3.2",
+    "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
