Add Fuzzing matching for the title

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cmdk": "^1.0.0",
     "electron-store": "^9.0.0",
     "framer-motion": "^11.2.10",
+    "fuzzyset.js": "^1.0.7",
     "lucide-react": "^0.396.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -56,6 +57,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/fuzzyset.js": "^0.0.5",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
