Add export to QR code

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.1",
     "@techstark/opencv-js": "^4.9.0-release.3",
+    "@types/qrcode": "^1.5.5",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -50,6 +51,7 @@
     "framer-motion": "^11.2.10",
     "fuzzyset.js": "^1.0.7",
     "lucide-react": "^0.396.0",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
