Add auto update

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -1,7 +1,7 @@
 // @see - https://www.electron.build/configuration/configuration
 {
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
-  "appId": "N/A",
+  "appId": "com.github.mumawQAQ.hsr-scanner",
   "asar": true,
   "productName": "HSR-Scanner",
   "directories": {
@@ -25,7 +25,7 @@
   },
   "nsis": {
     "oneClick": false,
-    "perMachine": false,
+    "perMachine": true,
     "allowToChangeInstallationDirectory": true,
     "deleteAppDataOnUninstall": true
   },
