Use third party lib for log view, allow user to control log level

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "@patternfly/react-log-viewer": "^5.2.0",
     "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
