--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "fuzzyset.js": "^1.0.7",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.396.0",
+    "python-shell": "^5.0.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
