--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hsr-scanner",
   "private": true,
-  "version": "2.1.1",
+  "version": "3.0.0-beta.1",
   "type": "module",
   "description": "A simple relic scanner for HSR",
   "author": {
