--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hsr-scanner",
   "private": true,
-  "version": "3.0.0-beta.2",
+  "version": "3.0.0",
   "type": "module",
   "description": "A simple relic scanner for HSR",
   "author": {
