--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
     "@patternfly/react-log-viewer": "^5.3.0",
+    "@tanstack/react-query": "^5.56.2",
     "@tauri-apps/api": "^1.6.0",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.439.0",
