--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
     "@patternfly/react-log-viewer": "^5.3.0",
     "@tanstack/react-query": "^5.56.2",
     "@tauri-apps/api": "^1.6.0",
+    "camelcase-keys": "^9.1.3",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^2.5.2",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
