--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,18 @@
     "@patternfly/react-log-viewer": "^5.3.0",
     "@tanstack/react-query": "^5.56.2",
     "@tauri-apps/api": "^1.6.0",
+    "@types/uuid": "^10.0.0",
     "camelcase-keys": "^9.1.3",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.5.2",
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
