--- a/frontend/src-tauri/Cargo.toml
+++ b/frontend/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.4", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.7.2", features = ["window-set-always-on-top"] }
+tauri = { version = "1.7.2", features = ["window-set-always-on-top", "windows7-compat", "devtools"] }
 regex = "1.10.6"
 
 
