--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "@types/uuid": "^10.0.0",
     "camelcase-keys": "^9.1.3",
     "framer-motion": "^11.5.4",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
+    "qrcode.react": "^4.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
