fix: fix the pyautogui version

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,7 +18,7 @@ uvicorn = {extras = ["standard"], version = "^0.32.1"}
 paddleocr = "^2.9.1"
 pynput = "^1.7.7"
 pygetwindow = "^0.0.9"
-pyautogui = "^0.9.54"
+pyautogui = "0.9.51"
 opencv-python = "^4.10.0.84"
 torch = "2.2.2"
 msgpack = "^1.1.0"
