--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ pnpm-debug.log*
 lerna-debug.log*
 
 backend/app/assets/database/*
-venv
 node_modules
 dist
 dist-ssr
@@ -26,3 +25,4 @@ release
 *.njsproj
 *.sln
 *.sw?
+/backend/.venv/
