--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,9 @@ msgpack = "^1.1.0"
 setuptools = "^75.6.0"
 mss = "^10.0.0"
 peewee = "^3.17.8"
+python-socketio = "^5.12.1"
+transitions = "^0.9.2"
+loguru = "^0.7.3"
 
 
 [build-system]
