--- a/backend/app/assets/configs/state_machine_config.json
+++ b/backend/app/assets/configs/state_machine_config.json
@@ -3,7 +3,6 @@
     "SingleRelicAnalysisPipeline": {
       "states": [
         "idle",
-        "cancel",
         "screenshot_stage",
         "detection_stage",
         "ocr_stage",
@@ -12,64 +11,56 @@
         "complete_stage"
       ],
       "initial": "idle",
-      "running_states": [
-        "screenshot_stage",
-        "detection_stage",
-        "ocr_stage",
-        "relic_analysis_stage",
-        "error_stage",
-        "complete_stage"
-      ],
       "transitions": [
         {
-          "trigger": "start_pipeline",
+          "trigger": "start_pipeline_trigger",
           "source": "idle",
           "dest": "screenshot_stage",
           "after": "run_current_stage"
         },
         {
-          "trigger": "next_stage",
+          "trigger": "next_stage_trigger",
           "source": "screenshot_stage",
           "dest": "detection_stage",
           "after": "run_current_stage"
         },
         {
-          "trigger": "next_stage",
+          "trigger": "next_stage_trigger",
           "source": "detection_stage",
           "dest": "ocr_stage",
           "after": "run_current_stage"
         },
         {
-          "trigger": "next_stage",
+          "trigger": "next_stage_trigger",
           "source": "ocr_stage",
           "dest": "relic_analysis_stage",
           "after": "run_current_stage"
         },
         {
-          "trigger": "next_stage",
+          "trigger": "next_stage_trigger",
           "source": "relic_analysis_stage",
           "dest": "complete_stage",
           "after": "run_current_stage"
         },
         {
-          "trigger": "next_stage",
+          "trigger": "next_stage_trigger",
           "source": "error_stage",
           "dest": "screenshot_stage",
           "after": "run_current_stage"
         },
         {
-          "trigger": "next_stage",
+          "trigger": "next_stage_trigger",
           "source": "complete_stage",
           "dest": "screenshot_stage",
           "after": "run_current_stage"
         },
         {
-          "trigger": "stop_pipeline",
+          "trigger": "stop_pipeline_trigger",
           "source": "*",
-          "dest": "cancel"
+          "dest": "idle"
         },
         {
-          "trigger": "on_error",
+          "trigger": "on_error_trigger",
           "source": "*",
           "dest": "error_stage",
           "after": "run_current_stage"
