--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.2",
     "uuid": "^10.0.0",
     "zod": "^3.23.8",
