--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.471.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
